@@ -36,6 +36,11 @@ location ^~ /Microsoft-Server-ActiveSync {
 location ^~ /SOGo/Microsoft-Server-ActiveSync {
     proxy_pass http://PH_SOGO_BIND_ADDRESS:PH_SOGO_BIND_PORT/SOGo/Microsoft-Server-ActiveSync;
     proxy_redirect http://PH_SOGO_BIND_ADDRESS:PH_SOGO_BIND_PORT/SOGo/Microsoft-Server-ActiveSync /;
+
+    proxy_connect_timeout PH_SOGO_PROXY_TIMEOUT;
+    proxy_send_timeout PH_SOGO_PROXY_TIMEOUT;
+    proxy_read_timeout PH_SOGO_PROXY_TIMEOUT;
+    proxy_buffers 64 256k;
 }
 
 location /SOGo.woa/WebServerResources/ {
